# scraping

./: .gitignore  pyproject.toml
scraping/hituji_fudosan/: .~lock.kanagawa copy.csv#  .~lock.result copy.csv#  README.md  get_city_urls.py  kanagawa.csv  kanagawa.html  kanagawa.py  main.py  saitama.csv  saitama.html  saitama.py  tokyo copy.csv  tokyo.csv  tokyo.py
